# Laamapeli

./: .gitignore  Audio.h  CMakeLists.txt  Ground.h  Header.h  Laamapeli.sln  Laamapeli.vcxproj.filters  Player.h  README.md
Laamapeli/: Audio.cpp  Audio.h  Draw.cpp  Draw.h  Events.cpp  Functions.cpp  GameState.h  Ground.cpp  Ground.h  Header.h  Include.h  Ini_other.cpp  Initialize_Destroy.cpp  Laamapeli.vcxproj  Laamapeli.vcxproj.filters  Main.cpp  Menu.h  Player.cpp  Player.h  Settings.cpp  Settings.ini  SimpleIni.h  Text.h  Timers.cpp  Variables.h
Laamapeli/Codes/: Ground.h  Main.cpp
Laamapeli/Data/Config/: Settings.ini
assets/: Settings.ini
cmake/: CopyIfMissing.cmake
src/: Audio.cpp  Audio.h  Draw.cpp  Draw.h  Events.cpp  GameState.cpp  GameState.h  Ground.cpp  Ground.h  Include.h  Main.cpp  Player.cpp  Player.h  Settings.cpp  Settings.h
